# scout

./: .gitignore  Makefile.am  Makefile.in  README.md  autogen.sh  config.h.in  configure  configure.ac
conf/: scout.conf  scout.service.yml
pkg/meta/: manifest.json.in
pkg/meta/scripts/: postinst
src/: Makefile.am  Makefile.in  common.c  common.h  hostname.c  nslookup.c  ping.c  scout_blueyos_netctl.c  scout_blueyos_netctl.h  scout_config.c  scout_config.h  scout_dhcp.c  scout_dhcp.h  scout_files.c  scout_files.h  scout_platform.c  scout_platform.h  scout_types.h  scoutctl.c  scoutd.c  tracert.c
tests/: Makefile.am  Makefile.in  test_config.c  test_dhcp.c
tools/: build-musl.sh  configure-blueyos.sh  resolve-musl-cc.sh  resolve-musl-prefix.sh
